# 2D_array

./: .gitignore  grid_creation.py  job.sh  job_array.sh  main.py  pyproject.toml  vegas_integral.py
benchmarks/: disconnected_scattering.py  norm_test.py
data/: sigma_grid0f1a.npz  sigma_grid0f1a_3D.npz  sigma_grid0f1a_omega1000.npz  sigma_grid0f2a.npz  sigma_grid0f2a_old.npz  sigma_grid0f4a.npz  sigma_grid0f6a.npz  tau_grid0f4a.npz  tau_grid0f6a.npz
plots/: plot_shamoon.py
src/: S_matrix.py  grid_creation.py  input_states.py  model.py  scattering_integrals.py  sigma_grid_creation.py  tau_grid_creation.py  test_batch_mode.py  test_interpolator.py
src/W_state/: I_term.py  W_state.py  W_state_FFT.ipynb  __init__.py  phase_diagram.ipynb  plot_unit_circ.ipynb
src/band_gap/: __init__.py  disp.py  vis_disp.ipynb
src/eigenstate_solving/: __init__.py  eigen_eq_domain.py  eigen_eq_integrand.py  eigen_eq_vegas.py  vis_eigen_integrand.py
src/grid/: sigma_grid_creation.py  tau_grid_creation.py
src/model/: __init__.py  defaults.py  input_states.py  model.py
src/plots/: plot_disp.ipynb  plot_disp.py  plot_multiChan.ipynb  plot_root_error.py  plot_self_energy.py  plot_shamoon.py  plot_tau_integrand.py
src/scattering/: __init__.py  api.py  backends.py  filters.py  integrand.py  vegas_transform.py
src/smatrix/: __init__.py  amplitudes.py  defaults.py  kinematics.py  propagators.py  self_energy_interp.py  tau.py  (+1 more)
tests/: batch_mode_test_results.md  conftest.py  norm_test.py  phys_verf.py  qmc_vs_vegas_comparison.md  run_symmetry_test.py  test_D_bounds_vectorization.py  test_batch_mode.py  test_bz_proj.py  test_eigen_eq_batch_numba.py  test_gh_filter_original_vs_vec.py  test_interpolator.py  test_lattice_sum.py  test_nquad_vs_qmc.py  test_qmc_vs_vegas.py  test_tau_comparison.py  tests.py
