[project]
name = "2d-array"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.26,<2.4",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
    "mpmath>=1.3.0",
    "vegas>=5.0",
    "joblib>=1.3.0",
    "numba>=0.60.0",
]
