[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "2d-array"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.26,<2.4",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
    "mpmath>=1.3.0",
    "vegas>=5.0",
    "joblib>=1.3.0",
    "numba>=0.60.0",
    "matplotlib>=3.10.0",
    "plotly>=6.7.0",
    "pandas>=3.0.2",
    "nbformat>=5.10.4",
    "jupyter>=1.1.1",
]
[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
extend-select = ["B", "Q"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
